--- a/src/templates/users.hbs
+++ b/src/templates/users.hbs
@@ -9,7 +9,7 @@
 <li class="user-item">Username:{{login.username}}</li>
 </ul>
 <form class="user-form" action="#">
-    <input type="text" class="user-input" placeholder="Enter your password">
+    <input type="text" class="user-input" name="userPass" placeholder="Enter your password">
     <button type="submit" class="login-button">Login</button>
 </form>
 {{/each}}
