--- a/src/templates/login.hbs
+++ b/src/templates/login.hbs
@@ -1,5 +1,5 @@
 {{#each this}}
-<li class="user-item">Email:{{dob.email}}</li>
+<li class="user-item">Email:{{email}}</li>
 <li class="user-item">Phone:{{cell}}</li>
 <li class="user-item">
     <img src="{{picture.medium}}" alt="some user"> 
