--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,6 @@ body {
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
+.hidden{
+  display: none;
+}
